tests/lang/errors/bare_throwing_call_fails.neon
//@ compile-fail
//@ error-contains: throws
//@ error-contains: try
//
// Throws are checked. A bare call to a throwing function is a compile error —
// the error must be dealt with by one of the three forms, and the diagnostic
// names them.

use std::io;

record Boom { msg: str }

impl Display for Boom {
    fn to_string(error: Boom) -> str { error.msg }
}
impl Error for Boom {}

fn go() throws Boom -> i64 {
    throw Boom { msg: "no" }
}

fn main() {
    let v = go();
    io::println("unreachable");
}
